--- a/services/index.html
+++ b/services/index.html
@@ -90,9 +90,7 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h4>Services</h4>
-              <h1>Driving Digital Success with Innovation</h1>
-              <p class="mb-0">At BizzNist, we empower businesses with cutting-edge IT solutions tailored to meet diverse industry needs. Whether you're a startup, small business, or enterprise, our team delivers expert solutions in website development, app development, SEO, and digital marketing to help you grow online.</p>
+              <h1>Services</h1>
             </div>
           </div>
         </div>
@@ -101,7 +99,7 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Service Details</li>
+            <li class="current">Services</li>
           </ol>
         </div>
       </nav>
@@ -119,7 +117,7 @@
             <div class="service-box">
               <h4>Service List</h4>
               <div class="services-list">
-                <a href="/services/website-development" class="active"><i class="bi bi-arrow-right-circle"></i><span>Website Development</span></a>
+                <a href="/services/website-development"><i class="bi bi-arrow-right-circle"></i><span>Website Development</span></a>
                 <a href="/services/advertisement-management"><i class="bi bi-arrow-right-circle"></i><span>Advertisement Management</span></a>
                 <a href="/services/seo-and-digital-marketing"><i class="bi bi-arrow-right-circle"></i><span>SEO & Digital Marketing</span></a>
                 <a href="/services/domain-and-hosting-solutions"><i class="bi bi-arrow-right-circle"></i><span>Domain & Hosting Solutions</span></a>
@@ -147,20 +145,24 @@
 
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
+            <h3>Driving Digital Success with Innovation</h3>
             <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
+              At BizzNist, we empower businesses with cutting-edge IT solutions designed to enhance online presence, streamline operations, and drive growth. Whether you need a high-performing website, a robust mobile application, or expert digital marketing strategies, we have you covered.
             </p>
+            <h3>What We Offer:</h3>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Website Development</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Advertisement Management</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>SEO & Digital Marketing</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Domain & Hosting Solutions</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Corporate Training & Technical Documentation</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Data Migration & IT Consulting</span></li>
             </ul>
             <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
-            </p>
+              We tailor our services to your unique business needs, ensuring seamless integration and long-term success.
+              </p>
             <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
+              Let’s transform your ideas into reality! Contact us today.
             </p>
           </div>
 
