--- a/services/index.html
+++ b/services/index.html
@@ -55,7 +55,7 @@
           <li class="dropdown"><a href="#services"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li class="dropdown"><a href="/services/website-development"><span>Website Development</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
+<!--                <ul>
                   <li><a href="#">Deep Dropdown 1</a></li>
                   <li><a href="#">Deep Dropdown 2</a></li>
                   <li><a href="#">Deep Dropdown 3</a></li>
@@ -69,6 +69,7 @@
               <li><a href="/services/corporate-training-and-technical-documentation">Corporate Training & Technical Documentation</a></li>
               <li><a href="/services/data-migration-and-it-consulting">Data Migration & IT Consulting</a></li>
             </ul>
+-->                
           </li>
           <li><a href="https://gyaansaar.bizznist.com/knowledge-base">Resource Center</a></li>
           <li><a href="#pricing">Pricing</a></li>
@@ -118,11 +119,12 @@
               <h4>Service List</h4>
               <div class="services-list">
                 <a href="/services/website-development"><i class="bi bi-arrow-right-circle"></i><span>Website Development</span></a>
-                <a href="/services/advertisement-management"><i class="bi bi-arrow-right-circle"></i><span>Advertisement Management</span></a>
+<!--                <a href="/services/advertisement-management"><i class="bi bi-arrow-right-circle"></i><span>Advertisement Management</span></a>
                 <a href="/services/seo-and-digital-marketing"><i class="bi bi-arrow-right-circle"></i><span>SEO & Digital Marketing</span></a>
                 <a href="/services/domain-and-hosting-solutions"><i class="bi bi-arrow-right-circle"></i><span>Domain & Hosting Solutions</span></a>
                 <a href="/services/corporate-training-and-technical-documentation"><i class="bi bi-arrow-right-circle"></i><span>Corporate Training & Technical Documentation</span></a>
                 <a href="/services/data-migration-and-it-consulting"><i class="bi bi-arrow-right-circle"></i><span>Data Migration & IT Consulting</span></a>
+-->
               </div>
             </div><!-- End Services List -->
 
