--- a/about-us/index.html
+++ b/about-us/index.html
@@ -52,7 +52,7 @@
           <li><a href="/" class="active">Home<br></a></li>
           <li><a href="/about-us">About</a></li>
           <!--<li><a href="#team">Team</a></li> -->
-          <li class="dropdown"><a href="#services"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="/services"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li class="dropdown"><a href="/services/website-development"><span>Website Development</span> </a>
                 <!--<ul>
@@ -68,9 +68,10 @@
               <li><a href="/services/domain-and-hosting-solutions">Domain & Hosting Solutions</a></li>
               <li><a href="/services/corporate-training-and-technical-documentation">Corporate Training & Technical Documentation</a></li>
               <li><a href="/services/data-migration-and-it-consulting">Data Migration & IT Consulting</a></li>
-            </ul>
+-->    
+              </ul>
           </li>
--->                
+            
           <li><a href="https://gyaansaar.bizznist.com/knowledge-base">Resource Center</a></li>
           <li><a href="#pricing">Pricing</a></li>
           </li>
