--- a/about-us/index.html
+++ b/about-us/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="IT solutions, website development, app development, SEO services, digital marketing, business IT consulting, BizzNist, professional IT services, technology solutions, IT support, eCommerce development, WordPress development, Shopify experts, Wix developers, business website solutions">
 
   <!-- Favicons -->
-  <link href="/bizznist/assets/img/favicon.png" rel="icon">
-  <link href="/bizznist/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,11 +18,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="/bizznist/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/bizznist/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="/bizznist/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="/bizznist/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="/bizznist/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
   <link href="/bizznist/assets/css/main.css" rel="stylesheet">
@@ -313,17 +313,17 @@
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="/bizznist/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/bizznist/assets/vendor/php-email-form/validate.js"></script>
-  <script src="/bizznist/assets/vendor/aos/aos.js"></script>
-  <script src="/bizznist/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="/bizznist/assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="/bizznist/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="/bizznist/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="/bizznist/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="/bizznist/assets/js/main.js"></script>
+  <script src="assets/js/main.js"></script>
 
 </body>
 
