--- a/footer.html
+++ b/footer.html
@@ -6,10 +6,10 @@
           <span class="sitename">BizzNist</span>
         </a>
         <div class="footer-contact pt-3">
-          <p>Ghaziabad</p>
-          <p>Uttar Pradesh, India, 201002</p>
-          <p class="mt-3"><strong>Phone:</strong> <span>+91 9210481163</span></p>
-          <p><strong>Email:</strong> <span>contact@bizznist.com</span></p>
+          <p>Mundka, Delhi</p>
+          <p>India, 110081</p>
+          <p class="mt-3"><strong>Phone:</strong> <span><a href="tel:+919210481163">+91 9210481163</a></span></p>
+          <p><strong>Email:</strong> <span><a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a></span></p>
         </div>
       </div>
 
