--- a/footer.html
+++ b/footer.html
@@ -3,13 +3,13 @@
     <div class="row gy-4">
       <div class="col-lg-4 col-md-6 footer-about">
         <a href="/" class="d-flex align-items-center">
-          <span class="sitename">BizzNist</span>
+          <span class="sitename" style="font-size: 26px; font-weight: 600;">BizzNist</span>
         </a>
         <div class="footer-contact pt-3">
           <p>Mundka, Delhi</p>
           <p>India, 110081</p>
-          <p class="mt-3"><strong>Phone:</strong> <span><a href="tel:+919210481163">+91 9210481163</a></span></p>
-          <p><strong>Email:</strong> <span><a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a></span></p>
+          <p class="mt-3"><strong>Phone:</strong><a href="tel:+919210481163">+91 9210481163</a></p>
+          <p><strong>Email:</strong><a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a></p>
         </div>
       </div>
 
@@ -51,3 +51,11 @@
     </div>
   </div>
 </footer>
+
+
+<style>
+  .footer .footer-about a {
+    font-size: 15px !important;
+    font-weight: 500 !important;
+  }
+  </style>
