--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -1,81 +1,134 @@
-<section id="contact" class="contact section">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Contact Us | BizzNist</title>
+  <meta name="description" content="Get in touch with BizzNist for IT solutions, website development, SEO, and digital services. Contact us via email, phone, or our quick inquiry form.">
+  <meta name="keywords" content="contact BizzNist, IT services support, website development contact, SEO inquiries, digital marketing support, business IT solutions">
+
+  <!-- Favicons -->
+  <link href="/assets/img/favicon.png" rel="icon">
+  <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Main CSS File -->
+  <link href="/assets/css/main.css" rel="stylesheet">
+</head>
+
+<body class="index-page">
+
+  <header></header>
+
+  <main class="main">
+
+    <!-- Page Title -->
+    <div class="page-title">
+      <nav class="breadcrumbs">
+        <div class="container">
+          <ol>
+            <li><a href="/">Home</a></li>
+            <li class="current">Contact Us</li>
+          </ol>
+        </div>
+      </nav>
+    </div><!-- End Page Title -->
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact section">
 
       <!-- Section Title -->
-      <div class="container section-title aos-init aos-animate" data-aos="fade-up">
-        <h2>Contact</h2>
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Contact Us</h2>
         <p>Let's Build Something Amazing Together!</p>
       </div><!-- End Section Title -->
 
-      <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4">
 
+          <!-- Contact Info -->
           <div class="col-lg-6">
-
             <div class="row gy-4">
+
               <div class="col-md-6">
-                <div class="info-item aos-init aos-animate" data-aos="fade" data-aos-delay="200">
+                <div class="info-item" data-aos="fade" data-aos-delay="200">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Address</h3>
                   <p>Mundka, Delhi</p>
                   <p>India, 110081</p>
                 </div>
-              </div><!-- End Info Item -->
+              </div>
 
               <div class="col-md-6">
-                <div class="info-item aos-init aos-animate" data-aos="fade" data-aos-delay="300">
+                <div class="info-item" data-aos="fade" data-aos-delay="300">
                   <i class="bi bi-telephone"></i>
-                  <h3>Call for quick inquiries</h3>
+                  <h3>Call Us</h3>
                   <p><a href="tel:+919210481163">+91 9210481163</a></p>
                 </div>
-              </div><!-- End Info Item -->
+              </div>
 
               <div class="col-md-6">
-                <div class="info-item aos-init" data-aos="fade" data-aos-delay="400">
+                <div class="info-item" data-aos="fade" data-aos-delay="400">
                   <i class="bi bi-envelope"></i>
                   <h3>Email Us</h3>
                   <p><a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a></p>
                 </div>
-              </div><!-- End Info Item -->
+              </div>
 
               <div class="col-md-6">
-                <div class="info-item aos-init" data-aos="fade" data-aos-delay="500">
+                <div class="info-item" data-aos="fade" data-aos-delay="500">
                   <i class="bi bi-clock"></i>
                   <h3>Open Hours</h3>
                   <p>Monday - Friday</p>
                   <p>10:00AM - 06:00PM</p>
                 </div>
-              </div><!-- End Info Item -->
+              </div>
 
             </div>
+          </div><!-- End Contact Info -->
 
-          </div>
-
+          <!-- Contact Form -->
           <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" class="php-email-form aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                  <label for="name" class="form-label">Your Name</label>
+                  <input type="text" name="name" id="name" class="form-control" placeholder="Enter your name" required>
                 </div>
 
-                <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
+                <div class="col-md-6">
+                  <label for="email" class="form-label">Your Email</label>
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Enter your email" required>
                 </div>
 
                 <div class="col-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+                  <label for="subject" class="form-label">Subject</label>
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
                 </div>
 
                 <div class="col-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
+                  <label for="message" class="form-label">Message</label>
+                  <textarea class="form-control" name="message" id="message" rows="6" placeholder="Write your message here..." required></textarea>
                 </div>
 
                 <div class="col-12 text-center">
                   <div class="loading">Loading</div>
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
-
                   <button type="submit">Send Message</button>
                 </div>
 
@@ -87,4 +140,20 @@
 
       </div>
 
-    </section>
+    </section><!-- End Contact Section -->
+
+  </main>
+
+  <footer></footer>
+
+  <!-- Vendor JS Files -->
+  <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/assets/vendor/php-email-form/validate.js"></script>
+  <script src="/assets/vendor/aos/aos.js"></script>
+  <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="/assets/js/main.js"></script>
+  <script src="/js/include.js"></script>
+
+</body>
+</html>
