--- a/about-us/index.html
+++ b/about-us/index.html
@@ -66,7 +66,7 @@
       </nav>
     </div><!-- End Page Title -->
 
-    <div id="ad-slot" class="ad-space"></div>  
+    <div id="header-ad" class="ad-space"></div>
 
     <!-- Starter Section Section -->
     <section id="starter-section" class="starter-section section" style="padding-top: 20px; padding-bottom: 20px;">
@@ -102,6 +102,8 @@
 
       
     </section><!-- /Starter Section Section -->
+
+      <div id="before-footer-ad" class="ad-space"></div>
 
   </main>
 
