--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -66,7 +66,7 @@
         </div>
       </nav>
     </div><!-- End Page Title -->
-
+    <div id="header-ad" class="ad-space"></div>
     <!-- Starter Section Section -->
     <section id="starter-section" class="starter-section section" style="padding-top: 20px; padding-bottom: 20px;">
 
@@ -124,7 +124,7 @@ Effective Date: 17-Jan-2025
 
       
     </section><!-- /Starter Section Section -->
-
+  <div id="before-footer-ad" class="ad-space"></div>
   </main>
 
     {% include footer.html %}
@@ -161,8 +161,7 @@ Effective Date: 17-Jan-2025
 
   <!-- Main JS File -->
   <script src="/assets/js/main.js"></script>
-  <script src="/js/include.js"></script>
-
+  
 </body>
 
 </html>
