--- a/services/advertisement-management/index.html
+++ b/services/advertisement-management/index.html
@@ -67,7 +67,7 @@
         </div>
       </nav>
     </div><!-- End Page Title -->
-
+<div id="header-ad" class="ad-space"></div>
     <!-- Service Details Section -->
     <section id="service-details" class="service-details section">
 
@@ -107,6 +107,8 @@
 
           </div>
 
+          <div id="ad-slot-sidebar-left" class="ad-space"></div>
+          
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
             <h2>Maximize Your Reach, Boost Your Sales!</h2>
@@ -184,7 +186,7 @@
       </div>
 
     </section><!-- /Service Details Section -->
-
+  <div id="before-footer-ad" class="ad-space"></div>
   </main>
   
     {% include footer.html %}
