--- a/services/index.html
+++ b/services/index.html
@@ -106,7 +106,7 @@
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span> <a href="tel:+91 9210481163">+91 9210481163</span></a></p>
               <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:bizznist@gmail.com">bizznist@gmail.com</a></p>
             </div>
-
+            <div id="ad-slot-sidebar-left" class="ad-space"></div>
           </div>
           
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
