--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="wanderwithreema/assets/img/favicon.png" rel="icon">
-  <link href="wanderwithreema/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,14 +18,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="wanderwithreema/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="wanderwithreema/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="wanderwithreema/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="wanderwithreema/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="wanderwithreema/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="wanderwithreema/assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: BizzNist
@@ -114,7 +114,7 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-6 order-lg-last hero-img" data-aos="zoom-out" data-aos-delay="100">
-            <img src="wanderwithreema/assets/img/hero-img.png" class="img-fluid animated" alt="">
+            <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
           </div>
           <div class="col-lg-6  d-flex flex-column justify-content-center text-center text-md-start" data-aos="fade-in">
             <h2>Wander with Reema</h2>
@@ -253,14 +253,14 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="wanderwithreema/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="wanderwithreema/assets/vendor/php-email-form/validate.js"></script>
-  <script src="wanderwithreema/assets/vendor/aos/aos.js"></script>
-  <script src="wanderwithreema/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="wanderwithreema/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="wanderwithreema/assets/js/main.js"></script>
+  <script src="assets/js/main.js"></script>
 
 </body>
 
