--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -117,7 +117,7 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section" style="background-image: url('assets/img/hero-img.png')";>
+    <section id="hero" class="hero section" style="background-image: url('assets/img/hero-img.jpg')";>
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-12  d-flex flex-column justify-content-center text-center text-md-start" data-aos="fade-in" style="align-items: center;">
